@@ -1,3 +1,8 @@
+2004-12-22  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl (::tkchat::logonScreen): Tidied up the key navigation
+	for the login screen.
+
 2004-12-17  Pascal Scheffers  <pascal@scheffers.net>
 
 	* tkchat.tcl: Schizophrenia is supported again.
